 cnp-mitre-ingress-allow-mysql-pod-communication-on-3306-h6-px8r.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-ingress-allow-mysql-pod-communication-on-3306-z1h1wht
  namespace: explorer
spec:
  description: "To allow communication to mysql pods from specific pods on port 3306"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-7d648d884
      helm.sh/chart: mysql-8.6.1
      statefulset.kubernetes.io/pod-name: mysql-0
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mysql
  ingress: 
  - fromEndpoints:
    - matchLabels:
        app: frontend   #change app: frontend to match your label
    toPorts:
    -  ports:
       -  port: '3306'
          protocol: ANY
